# blazecut

./: .env.example  .eslintrc.json  .gitignore  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PROGRESS.md  OPTIMIZATION_PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: CHANGELOG.md  README.md  _sidebar.md  faq.md  features.md  getting-started.md  workflow.md
src/: App.tsx  index.css  main.tsx  vitest-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: theme.less
src/components/: Dashboard.tsx  ExportPanel.module.less  Layout.module.less  Layout.tsx  LazyImage.tsx  NotificationCenter.tsx  ScriptEditor.module.less  ScriptEditor.tsx  ScriptPreview.module.less  VideoAnalyzer.tsx  VideoEditor.module.less  VideoEditor.tsx  VideoProcessingController.tsx  VideoSelector.module.less  VideoSelector.tsx  WorkflowMonitor.tsx
src/constants/: models.ts
src/context/: ThemeContext.tsx
src/core/: config.ts  types.ts
src/hooks/: useEditor.ts  useProjects.ts
src/layouts/: MainLayout.module.less  MainLayout.tsx
src/pages/: AIVideoEditor.module.less  AIVideoEditor.tsx  Dashboard.module.less  Dashboard.tsx  Editor.module.less  Editor.tsx  Home.module.less  Home.tsx  ProjectDetail.module.less  ProjectDetail.tsx  ProjectEdit.module.less  ProjectList.module.less  Projects.module.less  Projects.tsx  ScriptDetail.module.less  ScriptDetail.tsx  Settings.module.less  VideoEditor.module.less  (+3 more)
(+89 files in other folders)
